# editorismelicorum

./: .gitignore  LICENSE  README.md  output_file  pyproject.toml
data/: configs.json  dialog.json  input-configs.json  input.json  op_modes.json
data/marian-antiphons-simple/: 04-salve-regina-sim.gabc
data/templates/: bookpart_gtr_accomp.ly  bookpart_gtr_all.ly  bookpart_gtr_solo.ly  ed_melicorum_bookpart_1.ly  ed_melicorum_bookpart_2.ly  ed_melicorum_title.ly  gabctk_bookpart_1.ly  new-song-template-header.ly  new-song-template.ly
document/: doc-setup.ly  edi_melicorum_example.ly  editoris_melicorum_toc_preface.ly  example-hello-world.ly  marian-antiphons-simple-accomp.ly  marian-antiphons-simple-all.ly  marian-antiphons-simple-solo.ly  marian-antiphons-simple.ly  marian-antiphons-solemn-accomp.ly  marian-antiphons-solemn-all.ly  marian-antiphons-solemn-solo.ly  marian-antiphons-solemn.ly  marian-hymns-accomp.ly  marian-hymns-all.ly  marian-hymns-solo.ly  marian-hymns.ly  vol-1-hello-world.ly
document/parts/: editoris_melicorum_header.ly  editoris_melicorum_paper.ly  editoris_melicorum_toc_preface.ly
src/: config.json  convert-to-ly.py
src/editorismelicorum/: ed_melicorum_utils.py  editor_melicus.py  incoha.py  praedica_maj.py  praedica_min.py
src/editorismelicorum/lectormelicus/: lector_melicus.py
src/editorismelicorum/scholasticusmelicus/: scholasticus_melicus.py
src/editorismelicus/: config.json  ed_melicus_utils.py  editoris_melicus.py  praedica_min.py
static/design/: README.md  data-flow-v2.dot  data-flow.dot  data.md  workflows.md
(+5 files in other folders)
